--- a/4100901-tesla_turn_hazard_signal/project/Debug/makefile
+++ b/4100901-tesla_turn_hazard_signal/project/Debug/makefile
@@ -60,8 +60,8 @@ all: main-build
 main-build: 4100901-tesla_turn_hazard_signal.elf secondary-outputs
 
 # Tool invocations
-4100901-tesla_turn_hazard_signal.elf 4100901-tesla_turn_hazard_signal.map: $(OBJS) $(USER_OBJS) D:\UNI\7mo\ semestre\Estructuras\ Computacionales\4100901-tesla_turn_hazard_signal\project\STM32L476RGTX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
-	arm-none-eabi-gcc -o "4100901-tesla_turn_hazard_signal.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m4 -T"D:\UNI\7mo semestre\Estructuras Computacionales\4100901-tesla_turn_hazard_signal\project\STM32L476RGTX_FLASH.ld" --specs=nosys.specs -Wl,-Map="4100901-tesla_turn_hazard_signal.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
+4100901-tesla_turn_hazard_signal.elf 4100901-tesla_turn_hazard_signal.map: $(OBJS) $(USER_OBJS) D:\UNI\7mo\ semestre\Estructuras\ Computacionales\4100901-tesla-turn-hazard-signal\4100901-tesla-turn-hazard-signal\4100901-tesla_turn_hazard_signal\project\STM32L476RGTX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
+	arm-none-eabi-gcc -o "4100901-tesla_turn_hazard_signal.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m4 -T"D:\UNI\7mo semestre\Estructuras Computacionales\4100901-tesla-turn-hazard-signal\4100901-tesla-turn-hazard-signal\4100901-tesla_turn_hazard_signal\project\STM32L476RGTX_FLASH.ld" --specs=nosys.specs -Wl,-Map="4100901-tesla_turn_hazard_signal.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
 	@echo 'Finished building target: $@'
 	@echo ' '
 
